set02/problem06_compile_errors.txt
Compilation started at 10/31/2023, 12:24:29 PM
Compilation finished at 10/31/2023, 12:24:30 PM
Compilation started at 11/26/2023, 6:04:23 PM
Compilation finished at 11/26/2023, 6:04:23 PM
Compilation started at 11/26/2023, 6:05:48 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set02\problem06.c: In function 'main':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set02\problem06.c:10:18: warning: passing argument 1 of 'input_string' from incompatible pointer type [-Wincompatible-pointer-types]
     input_string(&a);
                  ^
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set02\problem06.c:4:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void input_string(char *a);
      ^~~~~~~~~~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set02\problem06.c:12:21: warning: passing argument 2 of 'str_reverse' from incompatible pointer type [-Wincompatible-pointer-types]
     str_reverse(str,&rev_str);
                     ^
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set02\problem06.c:5:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void str_reverse(char *str, char *rev_str);
      ^~~~~~~~~~~
Compilation finished at 11/26/2023, 6:05:48 PM
Compilation started at 11/26/2023, 6:08:01 PM
Compilation finished at 11/26/2023, 6:08:01 PM
Compilation started at 11/26/2023, 6:08:14 PM
Compilation finished at 11/26/2023, 6:08:14 PM
Compilation started at 11/26/2023, 6:10:02 PM
Compilation finished at 11/26/2023, 6:10:02 PM
Compilation started at 11/30/2023, 12:30:23 PM
Compilation finished at 11/30/2023, 12:30:23 PM
Compilation started at 11/30/2023, 12:31:22 PM
Compilation finished at 11/30/2023, 12:31:22 PM
Compilation started at 11/30/2023, 12:32:20 PM
Compilation finished at 11/30/2023, 12:32:20 PM
Compilation started at 11/30/2023, 12:33:45 PM
Compilation finished at 11/30/2023, 12:33:46 PM
Compilation started at 12/4/2023, 2:47:39 PM
Compilation finished at 12/4/2023, 2:47:40 PM
Compilation started at 12/4/2023, 2:49:25 PM
Compilation finished at 12/4/2023, 2:49:25 PM
Compilation started at 12/4/2023, 2:50:18 PM
Compilation finished at 12/4/2023, 2:50:19 PM
Compilation started at 12/4/2023, 10:30:17 PM
Compilation finished at 12/4/2023, 10:30:17 PM
Compilation started at 12/4/2023, 10:30:32 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set02\problem06.c: In function 'output':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set02\problem06.c:44:36: error: 'str' undeclared (first use in this function)
     printf("Reversed string:%s \n",str);
                                    ^~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set02\problem06.c:44:36: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 12/4/2023, 10:30:32 PM
Compilation started at 12/4/2023, 10:30:45 PM
Compilation finished at 12/4/2023, 10:30:45 PM
Compilation started at 12/4/2023, 10:31:45 PM
Compilation finished at 12/4/2023, 10:31:46 PM
Compilation started at 12/5/2023, 2:15:11 PM
Compilation finished at 12/5/2023, 2:15:11 PM
Compilation started at 12/5/2023, 2:15:20 PM
Compilation finished at 12/5/2023, 2:15:20 PM
Compilation started at 12/5/2023, 2:15:47 PM
Compilation finished at 12/5/2023, 2:15:48 PM
Compilation started at 12/5/2023, 2:16:01 PM
Compilation finished at 12/5/2023, 2:16:01 PM
Compilation started at 12/5/2023, 2:19:11 PM
Compilation finished at 12/5/2023, 2:19:11 PM
